--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,11 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            BONJOUR
+            <div>
+                <twig:Operation />
+            </div>
+        {% endblock %}
     </body>
 </html>
