--- a/templates/components/Operation.html.twig
+++ b/templates/components/Operation.html.twig
@@ -15,7 +15,7 @@
     </div>
 
     <div>
-        <p>LiveProp writable, in url, but not in route :</p>
+        <p>LiveProp writable, in url, but not mapped to path :</p>
         <input type="number" data-model="input3"> = {{ this.input3 }}
     </div>
 
